--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-	<a id="special"	class="link" href="http://yourpage.com">Your page</a>
-	<a class="link" href="http://theirpage.com">Their page</a>
+	<a id="special"	class="link" href="http://solutionsjl.net">SolutionsJL</a>
+	<a class="link" href="http://nxtcloud.ca">NxtCloud.ca</a>
 	<script src="myaction.js"></script>
 </body>
 
