bookstore - login - home

--- a/_index.html
+++ b/_index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-	<a id="special"	class="link" href="http://solutionsjl.net">SolutionsJL</a>
-	<a class="link" href="http://nxtcloud.ca">NxtCloud.ca</a>
+	<a id="special"	class="link" href="login.html">[login]</a>
+	<a class="link" href="_index.html">Home</a>
 	<script src="myaction.js"></script>
 </body>
 
